# companion-keeper

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPER.md  LICENSE  README.md  electron-builder.stage.yml  electron-builder.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.beads/: issues.jsonl
apps/desktop/: package.json  tsconfig.json
apps/desktop/scripts/: dev-electron.cjs  launch-electron.cjs
apps/desktop/src/: livePipeline.ts  llm.ts  main.ts  preload.ts  promptDefaults.ts  window.d.ts
apps/renderer/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/renderer/src/: App.tsx  styles.css
apps/renderer/src/components/: EditPersonaTab.tsx  FidelityTestTab.tsx  ImportDataTab.tsx  InlineStatus.tsx  LoreSplitView.tsx  (+3 more)
archive/: README.md
archive/python-legacy/: README.md  app.py  build_chat_dataset.py  ccv3_prompts.py  extract_oai_chats.py  extract_phrase_chats.py  fidelity_lab.py  generate_ccv3.py  pyproject.toml  requirements.txt  run_fidelity_lab.py
archive/python-legacy/scripts/: run_app_bg.sh  status_app_bg.sh  stop_app_bg.sh
archive/python-legacy/toolkit/: __main__.py  cli.py  config.py  fidelity.py  generate.py  llm_client.py  png_embed.py  prompts.py  ui.py
companion-keeper/: SKILL.md
docs/: BEADS_TRACKER.md  electron-architecture.md
scripts/: bump-desktop-version.cjs  dev-desktop.cjs  dev_setup.sh  prepare-electron-stage.cjs  run_app_bg.sh  status_app_bg.sh  stop_app_bg.sh
toolkit/: __init__.py  cli.py  config.py  dataset.py  extract.py  generate.py  manifest.py  prompts.py  state.py  ui.py
(+6 files in other folders)
